--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "animate.css": "^3.6.1",
+    "bcrypt": "^3.0.6",
     "bootstrap": "^4.0.0",
     "install": "^0.10.4",
     "jquery": "^3.3.1",
